package com.directi.training.dip.exercise;

public interface Database {
    int write(String inputString);
}
